# tubex-capd

./: CMakeLists.txt
capd_tubex/: tubex_CtcCapd.cpp  tubex_CtcCapd.h  tubex_TubeVectorODE.cpp  tubex_TubeVectorODE.h  tubex_capd2tubex.cpp  tubex_capd2tubex.h  tubex_capdTubeContractor.cpp  tubex_capdTubeContractor.h
examples/: bvp04.cpp  bvp09.cpp  bvp15.cpp  bvpcruz.cpp  integrodiff.cpp  ivp01.cpp  ivp02-solver.cpp  ivp02.cpp  ivp03.cpp  ivp12.cpp  ivp13.cpp  ivp21.cpp  ivppendulum.cpp  main.cpp  resultats-BVP
examples/bvpsolve/: bvp01a.cpp  bvp01b.cpp  bvp01c.cpp  bvp01d.cpp  bvp02a.cpp  bvp02b.cpp  bvp02c.cpp  bvp02d.cpp  bvp04a.cpp  bvp04b.cpp  bvp04c.cpp  bvp08a.cpp  bvp08b.cpp  bvp08c.cpp  bvp09a.cpp  bvp09b.cpp  bvp09c.cpp  bvp22a.cpp  bvp22b.cpp  bvp22c.cpp  bvp25a.cpp  bvp25b.cpp  bvp25c.cpp  bvp26a.cpp  bvp26b.cpp  bvp26c.cpp  bvp27a.cpp  bvp27b.cpp  bvp32a.cpp  bvp32b.cpp  bvp32c.cpp  bvp32d.cpp  bvp32e.cpp  bvp34a.cpp  bvp34b.cpp  bvp34c.cpp  bvp34d.cpp  bvp35a.cpp  bvp35b.cpp  bvp35c.cpp  (+3 more)
